fix: updated secondary btn colors for  better contrast

--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@
   }
 
   .btn-secondary {
-    @apply bg-neutral-two text-secondary-one border-2 border-solid border-secondary-one hover:bg-neutral-six active:bg-neutral-six active:inset-shadow-sm;
+    @apply bg-neutral-two text-primary-one border-2 border-solid border-primary-three hover:bg-neutral-six active:bg-neutral-six active:inset-shadow-sm;
   }
 
   /* ── Size ── */
